feat: add activity graph
